join sensors arrays with '|' instead of creating a long string; fixes for CA control on scheduler display; added Lead Operator to set CA dropdown and None to set product dropdown; fixed receptor status not displaying subarrays correctly

--- a/app/health/receptor-status/receptor-status.html
+++ b/app/health/receptor-status/receptor-status.html
@@ -41,7 +41,7 @@
             </div>
         </div>
 
-        <div ng-repeat="(key, subarray) in vm.subarrays | orderBy:'id'" ng-if="vm.sortBySubarrays"
+        <div ng-repeat="(key, subarray) in vm.subarrays" ng-if="vm.sortBySubarrays"
              class="subarray-container md-whiteframe-z2" layout="row" layout-align="start"
              style="min-width: 650px;" flex>
             <div layout="column" layout-align="start" flex>
