added collapse/expand button; populate end time with time for inline log; better layout; better chip assignment

--- a/app/sensor-graph/sensor-graph.html
+++ b/app/sensor-graph/sensor-graph.html
@@ -189,6 +189,7 @@
                     delete-hint="Remove from Sensor Graph"
                     title="Filter on Sensor List Results">
                     <md-autocomplete
+                        md-autoselect="true"
                         md-search-text="vm.chipsSearchText"
                         md-items="item in vm.chipsQuerySearch(vm.chipsSearchText)"
                         md-item-text="item.name">
