--- a/app/userlogs/userlogs.html
+++ b/app/userlogs/userlogs.html
@@ -36,11 +36,6 @@
             style="height: 36px; max-width: 42px; min-width: 42px; margin-top: 16px; margin-left: 0; padding: 0;">
             Now
         </md-button>
-        <md-button ng-init="vm.expandEntries = true" ng-click="vm.expandEntries = !vm.expandEntries" title="{{vm.expandEntries? 'Collapse All' : 'Expand All'" class="inline-action-button"
-            style="margin-top: 16px">
-            <i ng-show="vm.expandEntries" class="fa fa-plus-square-o"></i>
-            <i ng-show="!vm.expandEntries" class="fa fa-minus-square-o"></i>
-        </md-button>
         <md-button md-theme="{{$root.themePrimaryButtons}}" class="md-icon-button md-raised md-primary" ng-click="vm.addUserLog()"
             style="margin-top: 12px">
             <span class="fa fa-plus md-fab-fa-icon-small"></span>
@@ -66,37 +61,42 @@
                 <span class="fa fa-paperclip"></span>
             </span>
         </div>
+        <md-button ng-init="vm.expandEntries = true" ng-click="vm.expandEntries = !vm.expandEntries" title="{{vm.expandEntries? 'Collapse All' : 'Expand All'" class="inline-action-button"
+            style="margin-top: 16px; position: absolute; bottom: -8px; right: -8px">
+            <i ng-show="!vm.expandEntries" class="fa fa-plus-square-o"></i>
+            <i ng-show="vm.expandEntries" class="fa fa-minus-square-o"></i>
+        </md-button>
     </md-toolbar>
     <md-button style="border-bottom: 1px solid #d7d7d7" class="fetch-more-logs-button" ng-click="vm.fetchMoreFutureLogs()" ng-disabled="vm.fetchingFutureLogs">Fetch Logs for {{vm.lastFutureQueryDayTextStart}} to {{vm.lastFutureQueryDayTextEnd}}</md-button>
     <div flex class="md-whiteframe-z1" style="overflow: auto" id="userlogsContainer">
-        <div ng-repeat="userLog in vm.userLogs | filter:vm.filterAfterNow | filter:vm.filterByTag | orderBy:'start_time':true track by userLog.id"
-            ng-mouseenter="userLog.showInlineEditButton = true" ng-mouseleave="userLog.showInlineEditButton = false" flex layout="column" class="user-log-row">
-            <div layout="row" layout-align="start center" style="position: relative; border-top: 1px solid #d7d7d7" title="{{userLog.content}}">
-                <div title="Insert user log above this one" style="position: absolute; left: -5px; top: -5px;" ng-click="vm.setInlineStartTimeAfterLog(userLog); userLog.showInlineEditButton = false"
-                    style="font-size: 16px"><span ng-show="userLog.showInlineEditButton && !vm.chatMode" >+</span></div>
-                <div title="Insert user log below this one" style="position: absolute; left: -5px; bottom: -5px;" ng-click="vm.setInlineStartTimeBeforeLog(userLog); userLog.showInlineEditButton = false"
-                    style="font-size: 16px"><span ng-show="userLog.showInlineEditButton && !vm.chatMode">+</span></div>
-                    <i class="userlog-user-name">
-                        <b>{{userLog.user.name}}</b>
+        <div ng-repeat="userlog in vm.userLogs | filter:vm.filterAfterNow | filter:vm.filterByTag | orderBy:'start_time':true track by userlog.id"
+            ng-mouseenter="userlog.showInlineEditButton = true" ng-mouseleave="userlog.showInlineEditButton = false" flex layout="column" class="user-log-row">
+            <div layout="row" layout-align="start center" style="position: relative; border-top: 1px solid #d7d7d7" title="{{userlog.content}}">
+                <div title="Insert user log above this one" style="position: absolute; left: -5px; top: -5px;" ng-click="vm.setInlineStartTimeAfterLog(userlog); userlog.showInlineEditButton = false"
+                    style="font-size: 16px"><span ng-show="userlog.showInlineEditButton && !vm.chatMode" >+</span></div>
+                <div title="Insert user log below this one" style="position: absolute; left: -5px; bottom: -5px;" ng-click="vm.setInlineStartTimeBeforeLog(userlog); userlog.showInlineEditButton = false"
+                    style="font-size: 16px"><span ng-show="userlog.showInlineEditButton && !vm.chatMode">+</span></div>
+                    <i class="userlog-user-name" title="{{userlog.user.name}}">
+                        <b>{{userlog.user.name}}</b>
                     </i>
                     <span style="width: 125px; font-size: 12px">
-                        {{userLog.start_time | date:'yyyy-MM-dd HH:mm:ss'}}
+                        {{userlog.start_time}}
                     </span>
                     <span style="width: 125px; font-size: 12px">
-                        {{userLog.end_time | date:'yyyy-MM-dd HH:mm:ss'}}
+                        {{userlog.end_time}}
                     </span>
-                    <pre flex ng-class="{'compressed-userlog': vm.expandEntries}" style="margin: 0; padding: 0; background: transparent; margin-bottom: 8px; min-height: 33px;" ng-bind-html="userLog.content | linkify | toTrustedHtml"></pre>
-                    <div class="tags-list-container" title="{{userLog.tagsListText}}" ng-class="{'tags-list-compressed-container': vm.expandEntries}">
-                        <i style="font-size: 11px">{{userLog.tagsListText}}</i>
+                    <pre flex ng-class="{'compressed-userlog': !vm.expandEntries}" style="margin: 0; padding: 0; background: transparent; margin-bottom: 8px; min-height: 33px;" ng-bind-html="userlog.content | linkify | toTrustedHtml"></pre>
+                    <div class="tags-list-container" title="{{userlog.tagsListText}}" ng-class="{'tags-list-compressed-container': !vm.expandEntries}">
+                        <i style="font-size: 11px">{{userlog.tagsListText}}</i>
                     </div>
                 <span style="min-width: 24px; margin-left: 8px; font-size: 12px">
-                    <span ng-show="userLog.attachment_count>0">({{userLog.attachment_count}}
+                    <span ng-show="userlog.attachment_count>0">({{userlog.attachment_count}}
                     <span class="fa fa-paperclip"></span>)
                     </span>
                 </span>
                 <md-button title="Edit User Log" class="inline-action-button" style="margin: 0"
-                           ng-click="vm.editUserLog(userLog, $event)">
-                    <span style="display: inherit" ng-class="{'fa fa-edit': userLog.user_id === $root.currentUser.id, 'fa fa-eye': userLog.user_id !== $root.currentUser.id}"></span>
+                           ng-click="vm.editUserLog(userlog, $event)">
+                    <span style="display: inherit" ng-class="{'fa fa-edit': userlog.user_id === $root.currentUser.id, 'fa fa-eye': userlog.user_id !== $root.currentUser.id}"></span>
                 </md-button>
             </div>
         </div>
@@ -144,34 +144,34 @@
             </md-chips>
             <md-button ng-show="false" type="submit" style="margin: 8px;" class=""></md-button>
         </form>
-        <div ng-repeat="userLog in vm.userLogs | filter:vm.filterBeforeNow | filter:vm.filterByTag | orderBy:'start_time':true"
-                ng-mouseenter="userLog.showInlineEditButton = true" ng-mouseleave="userLog.showInlineEditButton = false" flex layout="column" class="user-log-row">
-        <div layout="row" layout-align="start center" style="position: relative; border-top: 1px solid #d7d7d7" title="{{userLog.content}}">
-            <div title="Insert user log above this one" style="position: absolute; left: -5px; top: -5px;" ng-click="vm.setInlineStartTimeAfterLog(userLog); userLog.showInlineEditButton = false"
-                style="font-size: 16px"><span ng-show="userLog.showInlineEditButton && !vm.chatMode" >+</span></div>
-            <div title="Insert user log below this one" style="position: absolute; left: -5px; bottom: -5px;" ng-click="vm.setInlineStartTimeBeforeLog(userLog); userLog.showInlineEditButton = false"
-                style="font-size: 16px"><span ng-show="userLog.showInlineEditButton && !vm.chatMode">+</span></div>
+        <div ng-repeat="userlog in vm.userLogs | filter:vm.filterBeforeNow | filter:vm.filterByTag | orderBy:'start_time':true"
+                ng-mouseenter="userlog.showInlineEditButton = true" ng-mouseleave="userlog.showInlineEditButton = false" flex layout="column" class="user-log-row">
+        <div layout="row" layout-align="start center" style="position: relative; border-top: 1px solid #d7d7d7" title="{{userlog.content}}">
+            <div title="Insert user log above this one" style="position: absolute; left: -5px; top: -5px;" ng-click="vm.setInlineStartTimeAfterLog(userlog); userlog.showInlineEditButton = false"
+                style="font-size: 16px"><span ng-show="userlog.showInlineEditButton && !vm.chatMode" >+</span></div>
+            <div title="Insert user log below this one" style="position: absolute; left: -5px; bottom: -5px;" ng-click="vm.setInlineStartTimeBeforeLog(userlog); userlog.showInlineEditButton = false"
+                style="font-size: 16px"><span ng-show="userlog.showInlineEditButton && !vm.chatMode">+</span></div>
                 <i class="userlog-user-name">
-                    <b>{{userLog.user.name}}</b>
+                    <b>{{userlog.user.name}}</b>
                 </i>
                 <span style="width: 125px; font-size: 12px">
-                    {{userLog.start_time | date:'yyyy-MM-dd HH:mm:ss'}}
+                    {{userlog.start_time}}
                 </span>
                 <span style="width: 125px; font-size: 12px">
-                    {{userLog.end_time | date:'yyyy-MM-dd HH:mm:ss'}}
+                    {{userlog.end_time}}
                 </span>
-                <pre flex ng-class="{'compressed-userlog': vm.expandEntries}" style="margin: 0; padding: 0; background: transparent; margin-bottom: 8px; min-height: 33px;" ng-bind-html="userLog.content | linkify | toTrustedHtml"></pre>
-                <div class="tags-list-container" title="{{userLog.tagsListText}}" ng-class="{'tags-list-compressed-container': vm.expandEntries}">
-                    <i style="font-size: 11px">{{userLog.tagsListText}}</i>
+                <pre flex ng-class="{'compressed-userlog': !vm.expandEntries}" style="margin: 0; padding: 0; background: transparent; margin-bottom: 8px; min-height: 33px;" ng-bind-html="userlog.content | linkify | toTrustedHtml"></pre>
+                <div class="tags-list-container" title="{{userlog.tagsListText}}" ng-class="{'tags-list-compressed-container': !vm.expandEntries}">
+                    <i style="font-size: 11px">{{userlog.tagsListText}}</i>
                 </div>
                 <span style="min-width: 24px; margin-left: 8px; font-size: 12px">
-                    <span ng-show="userLog.attachment_count>0">({{userLog.attachment_count}}
+                    <span ng-show="userlog.attachment_count>0">({{userlog.attachment_count}}
                     <span class="fa fa-paperclip"></span>)
                     </span>
                 </span>
                 <md-button title="Edit User Log" class="inline-action-button" style="margin: 0"
-                           ng-click="vm.editUserLog(userLog, $event)">
-                    <span style="display: inherit" ng-class="{'fa fa-edit': userLog.user_id === $root.currentUser.id, 'fa fa-eye': userLog.user_id !== $root.currentUser.id}"></span>
+                           ng-click="vm.editUserLog(userlog, $event)">
+                    <span style="display: inherit" ng-class="{'fa fa-edit': userlog.user_id === $root.currentUser.id, 'fa fa-eye': userlog.user_id !== $root.currentUser.id}"></span>
                 </md-button>
             </div>
         </div>
