--- a/app/userlogs/userlogs.html
+++ b/app/userlogs/userlogs.html
@@ -114,34 +114,39 @@
             <md-input-container md-is-error="vm.newLogContent.length === 0" flex md-no-float class="md-primary" title="Content">
                 <input id="inlineContentInput" focus flex placeholder="Content" ng-model="vm.newLogContent" ng-focus="vm.setNewLogStartTimeAfterFocus()">
             </md-input-container>
-            <md-chips ng-model="vm.inlineTags" style="margin: 0; padding: 0; max-width: 450px; max-height: 48px; overflow: auto" md-autocomplete-snap="true" md-require-match="true" flex
-                secondary-placeholder="+"
-                md-on-add="vm.tagFilterChanged()"
-                md-on-remove="vm.tagFilterChanged()"
-                class="small-chips">
-                <md-autocomplete
-                    md-no-cache="true"
-                    md-autoselect="true"
-                    md-search-text="searchText"
-                    md-items="item in vm.querySearch(searchText, vm.inlineTags)"
-                    md-item-text="item.name"
-                    placeholder="Select tags for log" secondary-placeholder="+">
-                    <md-item-template>
-                        <span md-highlight-text="searchText" title="{{item.slug}}">{{item.name}}</span>
-                    </md-item-template>
-                    <md-not-found>
-                        No matches found
-                    </md-not-found>
-                </md-autocomplete>
-                <md-chip-template>
-                    <span style="overflow: auto; width: 100%; font-size: 10px">
-                        <strong>{{$chip.name}}</strong>
-                    </span>
-                </md-chip-template>
-                <md-button class="md-fab" aria-label="Remove Tag" style="font-size:10px; max-width: 12px">
-                    <md-icon md-chip-remove md-font-icon="fa-close" style="color:white; fill:white;"></md-icon>
-                </md-button>
-            </md-chips>
+            <div flex style="max-width: 450px; max-height: 48px; overflow: auto" ng-class="{'chips-tag-input-error': vm.containsInvalidInlineTagSelection}">
+                <md-tooltip md-visible="vm.containsInvalidInlineTagSelection" md-autohide="false">
+                    Select at least one of the mandatory tags: {{vm.mandatoryTagsListString}}
+                </md-tooltip>
+                <md-chips ng-model="vm.inlineTags" style="margin: 0; padding: 0; max-width: 450px; max-height: 48px;" md-autocomplete-snap="true" md-require-match="true" flex
+                    secondary-placeholder="+"
+                    md-on-add="vm.inlineTagFilterChanged()"
+                    md-on-remove="vm.inlineTagFilterChanged()"
+                    class="small-chips">
+                    <md-autocomplete
+                        md-no-cache="true"
+                        md-autoselect="true"
+                        md-search-text="searchText"
+                        md-items="item in vm.querySearch(searchText, vm.inlineTags)"
+                        md-item-text="item.name"
+                        placeholder="Select tags for log" secondary-placeholder="+">
+                        <md-item-template>
+                            <span md-highlight-text="searchText" title="{{item.slug}}">{{item.name}}</span>
+                        </md-item-template>
+                        <md-not-found>
+                            No matches found
+                        </md-not-found>
+                    </md-autocomplete>
+                    <md-chip-template>
+                        <span style="overflow: auto; width: 100%; font-size: 10px">
+                            <strong>{{$chip.name}}</strong>
+                        </span>
+                    </md-chip-template>
+                    <md-button class="md-fab" aria-label="Remove Tag" style="font-size:10px; max-width: 12px">
+                        <md-icon md-chip-remove md-font-icon="fa-close" style="color:white; fill:white;"></md-icon>
+                    </md-button>
+                </md-chips>
+            </div>
             <md-button ng-show="false" type="submit" style="margin: 8px;" class=""></md-button>
         </form>
         <div ng-repeat="userlog in vm.userLogs | filter:vm.filterBeforeNow | filter:vm.filterByTag | orderBy:'start_time':true"
